[feature/misc]: spanish update

--- a/payload/Apps/pscbios/lang/Spanish.txt
+++ b/payload/Apps/pscbios/lang/Spanish.txt
@@ -71,6 +71,7 @@ Detalles de configuracion del Mando
 Gamepad input configuration: 
 Configuracion de entrada del Mando:
 Gamepads
+Mandos
 Go back
 Ir atras
 Interface details:
