--- a/payload/Apps/pscbios/lang/English.txt
+++ b/payload/Apps/pscbios/lang/English.txt
@@ -1,4 +1,8 @@
-(Ask on our discord for a link)
+ - Mapping (Available):
+
+ - Mapping (Not found)
+
+(Ask on our discord for a link) 
 
 .-= Code C++ and shell scripts =-.
 
@@ -8,6 +12,18 @@
 
 .-= Testing =-.
 
+1. Using a micro USB charging cable connect the controller to one of available USB FRONT port of the console
+
+2. When the leds on the controller will start to blink press the PlayStation Home button
+
+3. The controller should be recognized as normal wired PS3 compatible controller
+
+4. Disconnect charging cable from the console and press PlayStation Home button again
+
+5. After 1-5 seconds controller will auto pair to AutoBleem and show player number LED (similar as paired to PS3)
+
+6. If the controller does not react for buttons or analog sticks are setup wrong - use mapping section to reconfigure
+
 About
 
 Active
@@ -15,6 +31,8 @@ Active
 Backspace
 
 Bluetooth Configuration
+
+Bluetooth controller pairing
 
 Bluetooth information:
 
@@ -24,6 +42,8 @@ Buttons:
 
 Cancel
 
+Cancel mapping
+
 Caps
 
 Change
@@ -31,6 +51,10 @@ Change
 Close
 
 Confirm
+
+Connect DualShock3 by Bluetooth (Wireless mode)
+
+Connect other gamepad by Bluetooth
 
 Controller:
 
@@ -44,11 +68,15 @@ Download latest:
 
 Driver mode:
 
+DualShock3/SixAxis Wireless Pairing
+
 Edit Network WPA WiFi Credentials
 
 Edit Password
 
 Edit SSID
+
+Enter name for new gamepad
 
 Enter Password
 
@@ -56,23 +84,37 @@ Enter SSID
 
 Entry
 
+Error Storing mapping to database
+
 Ethernet information:
 
 Exit
 
 Found
 
+Game controller DB:
+
+Game controller information:
+
 Game Controller information:
 
 Game Controllers number: 
+
+Gamepad configuration changed.
+
+Gamepad configuration changed. Mapping interrupted.
 
 Gamepad configuration details
 
 Gamepad input configuration: 
 
-Gamepads
+Gamepad Support Configuration
 
 Go back
+
+Hats:
+
+In AutoBleem DualShock/SixAxis type controller are automatically paired if you have a compatible BlueTooth dongle and an AutoBleem Kernel installed.
 
 Interface details:
 
@@ -82,15 +124,23 @@ IP configuration:
 
 Loading timezones...
 
-Mapping tester
+Mapping Complete - press (OPEN) to save. (POWER) to cancel.
+
+Mapping stored to database
 
 Move Cursor
+
+Move your sticks to state shown or press (OPEN) if stick position not avaliable.
 
 New devices:
 
 Next pad
 
+No button on controller
+
 NO GAME CONTROLLERS OPENED
+
+NO GAMEPADS CONNECTED
 
 No networks found
 
@@ -99,6 +149,18 @@ Not active
 Not found
 
 Not Found
+
+NOTE 1: After pairing in BlueTool controller is automatically mapped until you unpair it
+
+NOTE 1:Genuine SONY DualShock3 and Sixaxis are supported. Also SHANWAN produced clones should work.
+
+NOTE 2: In case you pair the controller back to PS3 or other console you have to follow this procedure again.
+
+NOTE 3: You do not need to do this procedure in this screen. USB pairing works on any screen as soon console is powered on.
+
+NOTE 4: Pairing information is saved in console, so next time just press PlayStation Home on the controller and it will work in AutoBleem
+
+NOTE: Make sure none of the buttons are pressed before mapping and all analog sticks are in default position.
 
 Operations:
 
@@ -110,7 +172,13 @@ Playstation Classic Hardware Information
 
 Please confirm
 
+Please test a new mapping
+
 POWERING OFF... PLEASE WAIT
+
+Press a button highlighted or (OPEN) if not avaliable.
+
+Press a trigger highlighted fully or (OPEN) if not avaliable.
 
 Reinitializing Network
 
@@ -119,6 +187,8 @@ Restart Network
 Restart Networking Now?
 
 Restarted Wi-Fi  With SSID:
+
+Save
 
 Scan controller for new devices
 
@@ -134,6 +204,10 @@ Select WiFi Network to connect
 
 Set controller discoverable
 
+Setup Gamepads
+
+Setup/Test Game Controller or update mapping
+
 Space
 
 SSID:
@@ -142,13 +216,23 @@ Support via Discord:
 
 This project is freeware. It works AS IS and We take no responsibility for any issues or damage.
 
+This section of hardware configuration is not available yet.
+
 Timezone:
 
+To pair a controller of this kind please follow the procedure
+
+Until then please use BlueTool by DanTheMan (Included in the package)
+
 Update mapping
+
+Updating mapping
 
 Use Controller
 
 Waiting for IP Address...
+
+We are working on implementing Bluetooth pairing on console for a next release
 
 Wi-Fi Connection:
 
@@ -159,4 +243,6 @@ WiFi Settings
 Write Config/Restart Network
 
 Write Configuration/Restart Network
+
+You can test your controller
 
